MH-3851: fixed not showing all and failed recording screens
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7505 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
@@ -81,7 +81,7 @@
           <div id="category-selector-container" class="fl-fix">
             <ul class="category-selector">
               <li class="category-selector-item">
-                <span class="state-selector selector-all clickable" state="all"><span id="i18n_view_all">All</span> <span id="count-total"></span></span>
+                <span class="state-selector selector-all clickable" state="all"><span id="i18n_view_all">All</span> <span id="count-all"></span></span>
               </li>
               <li class="category-selector-spacer">
                 &#124;
@@ -117,7 +117,7 @@
                 &#124;
               </li>
               <li class="category-selector-item">
-                <span class="state-selector selector-failed clickable" state="failed"><span id="i18n_view_failed">Failed</span> <span id="count-errors">()</span></span>
+                <span class="state-selector selector-failed clickable" state="failed"><span id="i18n_view_failed">Failed</span> <span id="count-failed">()</span></span>
               </li>
             </ul>
           </div>
