--- a/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="js/engage-ui.js"></script>
     <script type="text/javascript" src="engage-hybrid-player/player-multi-hybrid-initialize.js"></script>
     <script type="text/javascript" src="shared_js/version.js"></script>  
+    <script type="text/javascript" src="js/jquery.timers-1.2.js"></script>
 
     <script type="text/javascript" src="js/segments.js"></script>
     <script type="text/javascript" src="js/bookmarks.js"></script>
