MH-4225, MH-3742, MH-3816, MH-4033, MH-4078, MH-4210: (aklassen)
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7524 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/complete.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/complete.html
@@ -59,6 +59,21 @@
       <span class="formField-label">File uploaded:</span>
       <span class="fieldValue"></span>
     </li>
+        <!-- field: Media File Name -->
+    <li id="field-filename" class="ui-helper-clearfix" style="margin-bottom:1em;">
+      <span class="formField-label">File uploaded:</span>
+      <span class="fieldValue"></span>
+    </li>
+        <!-- field: Media File Name -->
+    <li id="field-filename" class="ui-helper-clearfix" style="margin-bottom:1em;">
+      <span class="formField-label">File uploaded:</span>
+      <span class="fieldValue"></span>
+    </li>
+        <!-- field: Media File Name -->
+    <li id="field-filename" class="ui-helper-clearfix" style="margin-bottom:1em;">
+      <span class="formField-label">File uploaded:</span>
+      <span class="fieldValue"></span>
+    </li>
   </ul>
 </div>
 
@@ -66,6 +81,6 @@
   <span class="formField-label">&nbsp;</span>
   <span class="fieldValue">
     <a href="/admin/recordings.html?show=processing" style="float:left;margin-top:5px;"><< Back to Recordings</a>
-    <a href="upload.html" style="float:right;margin-top:5px;padding-right:100px;">Upload another Recording >></a>
+    <a id="complete-upload" href="upload.html" style="float:right;margin-top:5px;padding-right:100px;">Upload another Recording >></a>
   </span>
 </div>
