--- a/modules/matterhorn-engage-ui/src/main/resources/ui/embed.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/embed.html
@@ -30,7 +30,8 @@
     <script type="text/javascript" src="jquery/plugins/jquery.client.js"></script>
     <script type="text/javascript" src="js/engage-ui.js"></script>
     <script type="text/javascript" src="engage-hybrid-player/embed-hybrid-initialize.js"></script>
-    <script type="text/javascript" src="shared_js/version.js"></script>  
+    <script type="text/javascript" src="shared_js/version.js"></script>
+    <script type="text/javascript" src="js/jquery.timers-1.2.js"></script>
 
     <script type="text/javascript" src="js/segments.js"></script>
     <script type="text/javascript" src="js/embed.js"></script>
