MH-4327 -- added a logout filter and link on the recordings page
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7582 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
@@ -29,6 +29,7 @@
   <body>
     <div id="pageHeader">
       <div id="currentVersion"></div>
+      <div id="logout"><a href="/j_spring_security_logout">logout</a></div>
       <div id="newestVersion" style="text-align: right; float: right;"></div>
     </div>
 
