--- a/modules/matterhorn-admin-ui/src/main/resources/ui/upload.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/upload.html
@@ -217,7 +217,7 @@
                     <option value="">Choose one:</option>
                     <option value="presenter/source">Presenter</option>
                     <option value="presentation/source">Presentation</option>
-                    <option value="indefinite/source">Other/Mixed/Unknown</option>
+                    <option value="presentation/source"">Other/Mixed/Unknown</option>
                   </select>
                   <span class="helpIcon" title="Click for help">&nbsp;</span>
               </ul>
