--- a/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
@@ -98,8 +98,8 @@
                 <li id="missing-duration" class="missing-fields-item single-error multiple-error">
                   <span class="fl-icon inline-icon icon-bullet" title=""></span>You must have a <a href="javascript:document.getElementById('durationHour').focus();">duration</a> greater than 0 hours and 0 minutes.
                 </li>
-                <li id="missing-attendees" class="missing-fields-item single-error multiple-error">
-                  <span class="fl-icon inline-icon icon-bullet" title=""></span>Please choose a <a href="javascript:document.getElementById('attendees').focus();">capture agent</a> to record the event.
+                <li id="missing-agent" class="missing-fields-item single-error multiple-error">
+                  <span class="fl-icon inline-icon icon-bullet" title=""></span>Please choose a <a href="javascript:document.getElementById('agent').focus();">capture agent</a> to record the event.
                 </li>
                 <li id="error-recurstart-end" class="missing-fields-item multiple-error">
                   <span class="fl-icon inline-icon icon-bullet" title=""></span>Please choose an end date that occurs after the start date.
@@ -108,7 +108,7 @@
                   <span class="fl-icon inline-icon icon-bullet" title=""></span>You must select one day in a week for a group of recordings to occur.
                 </li>
                 <li id="notice-offline" class="missing-fields-item" style="display:none;">
-                  <span class="fl-icon inline-icon icon-bullet" title=""></span>The <a href="javascript:document.getElementById('attendees').focus();">capture agent</a> you previously selected is currently offline. You may want to select a different capture agent.
+                  <span class="fl-icon inline-icon icon-bullet" title=""></span>The <a href="javascript:document.getElementById('agent').focus();">capture agent</a> you previously selected is currently offline. You may want to select a different capture agent.
                 </li>
               </ul>
             </div>
@@ -123,7 +123,7 @@
             <div class="fl-widget-content warnbox-content">
               <ul>
                 <li id="notice-offline" class="missing-fields-item">
-                  <span class="fl-icon inline-icon icon-bullet" title=""></span>The <a href="javascript:document.getElementById('attendees').focus();">capture agent</a> you previously selected is currently offline. You may want to select a different capture agent.
+                  <span class="fl-icon inline-icon icon-bullet" title=""></span>The <a href="javascript:document.getElementById('agent').focus();">capture agent</a> you previously selected is currently offline. You may want to select a different capture agent.
                 </li>
               </ul>
             </div>
@@ -345,9 +345,9 @@
                       <span class="fl-icon icon-help" id="help_duration" title="Click for help"></span>
                     </li>
                     <li class="required" style="clear: both;">
-                      <label class="fl-label"  id="label-attendees"><span id="i18n_agent_label"></span>:</label>
+                      <label class="fl-label"  id="label-agent"><span id="i18n_agent_label"></span>:</label>
                       <div>
-                        <select id="attendees" name="attendees">
+                        <select id="agent" name="agent">
                           <option value="">Choose one:</option>
                         </select>
                         <span class="fl-icon icon-help"  id="help_agent" title="Click for help"></span>
@@ -704,7 +704,7 @@
               </div>
               <div class="data-value"></div>
           </div>
-          <div id="data-attendees" class="data-row">
+          <div id="data-agent" class="data-row">
               <div class="data-label">
                  Capture Agent:
               </div>
