--- a/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
@@ -123,6 +123,8 @@
         <span id="oc_video-size-menue" style="float:right;visibility:hidden;">
       </div>
     </div>
+    <div id="oc_player_video-dropdown" style="position:absolute; background-color:black;z-index:10000;visibility:hidden;">
+    </div>
 
     <div id="data"></div>
 
