MH-4327: fixed position of the logout-link in AdminUI
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7635 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
@@ -29,10 +29,12 @@
   <body>
     <div id="pageHeader">
       <div id="currentVersion"></div>
-      <div id="logout"><a href="/j_spring_security_logout">logout</a></div>
       <div id="newestVersion" style="text-align: right; float: right;"></div>
     </div>
-
+    <div id="logout" style="text-align: right; left: 0px; width: 100%; position: absolute;">
+        <div style="background-color: rgb(246, 146, 30); float: right; padding: 3px 15px; display: inline-block;"><a href="/j_spring_security_logout">Log out</a></div>
+        <div style="display: inline-block; border-style: solid; border-width: 12px 20px; border-color: rgb(246, 146, 30) rgb(246, 146, 30) white white; width: 0px; float: right;"></div>
+    </div>
     <!-- notification that javaScript is disabled -->
     <noscript>
       <center>
