MH-4059 - changes from saltevogt
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7638 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="engage-hybrid-player/bridge/lib/FABridge.js"></script>
     <script type="text/javascript" src="engage-hybrid-player/bridge/Videodisplay.js"></script>
     <script type="text/javascript" src="jquery/plugins/jARIA.js"></script>
+    <script type="text/javascript" src="jquery/plugins/jquery.tooltip.js"></script>
     <script type="text/javascript" src="jquery/jquery-ui-1.8.1.custom.min.js"></script>
     <script type="text/javascript" src="engage-hybrid-player/player-multi-hybrid-scubber.js"></script>
     <script type="text/javascript" src="engage-hybrid-player/player-multi-hybrid.js"></script> 
