--- a/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/recordings.html
@@ -160,6 +160,17 @@
           <!-- This is where the rendered table goes -->
         </div>
 
+        <div id="refresh-controls-container" style="float:left;">
+          <input type="checkbox" id="refresh-enabled" checked="checked">
+          <span class="refresh-text">Update table every&nbsp;</span>
+          <select id="refresh-interval">
+            <option value="5">5</option>
+            <option value="7">7</option>
+            <option value="10">10</option>
+          </select>
+          <span class="refresh-text">&nbsp;seconds.</span>
+        </div>
+
         <!-- paging navigation -->
         <div class="paging-nav-container">
           <span>
