--- a/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
     <script type="text/javascript" src="js/confidence.js"></script>
     <script type="text/javascript">
-      $(document).ready(function(){ Monitor.loadDevices(); });
+      $(document).ready(Monitor.init);
     </script>
   </head>
   <body>
@@ -22,6 +22,7 @@
       <div id="page_tab">
         <ul>
           <li class="tab"><a href="/admin/recordings.html?show=upcoming" alt="Recordings">Recordings</a></li>
+          <li class="tab"><a href="/admin/series.html" alt="Recordings">Series</a></li>
           <li class="selected tab"style="border-right: 1px solid black" class="selected"><a href="/admin/agent_status.html" alt="Capture Agents">Capture Agents</a></li>
         </ul>
       </div>
