MH-3833: show notice in ScheduleUI when user selects a CA in a different timezone
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7727 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/scheduler.html
@@ -122,8 +122,11 @@
             </div>
             <div class="fl-widget-content warnbox-content">
               <ul>
-                <li id="notice-offline" class="missing-fields-item">
+                <li id="notice-offline" class="missing-fields-item" style="display:none;">
                   <span class="fl-icon inline-icon icon-bullet" title=""></span>The <a href="javascript:document.getElementById('agent').focus();">capture agent</a> you previously selected is currently offline. You may want to select a different capture agent.
+                </li>
+                <li id="notice-tzdiff" class="missing-fields-item" style="display:none;">
+                  <span class="fl-icon inline-icon icon-bullet" title=""></span>The timezone for this <a href="javascript:document.getElementById('agent').focus();">capture agent</a> is <span id="tzdiff"></span>. Capture will occur according to the time local to the agent, though when you look at your list of Recordings it will be shown in your local time.
                 </li>
               </ul>
             </div>
